# agentic-graph

Agentic Graph/: Agentic Graph.entitlements  Agentic_GraphApp.swift  ContentView.swift  DocumentIcon.icns  INSTRUCTIONS.md  Info.plist  README.md  build-export.sh
Agentic Graph/Model/: AnalysisFinding.swift  AnalysisPattern.swift  AppLanguage.swift  GraphDocument.swift  GraphEdge.swift  GraphNode.swift  LLMProviderConfig.swift  LatencyConfig.swift  MultiSelectFields.swift  MultiSelectFormState.swift  NodeDefaults.swift  NodeKind.swift  PortKind.swift  PromptAnalysisIssue.swift  SizingConfig.swift  SizingEstimate.swift  VersionSnapshot.swift
Agentic Graph/Resources/: DefaultAnalysisPatterns.json  Localizable.xcstrings
Agentic Graph/Utilities/: AGFileType.swift  AGMerge.swift  AutoGenImporter.swift  CrewAIImporter.swift  DragTypes.swift  EdgeGeometry.swift  FocusedDocumentKey.swift  (+16 more)
Agentic Graph/examples/import example/CrewAI Market Research Crew/: README.md  pyproject.toml
Agentic Graph/examples/import example/CrewAI Market Research Crew/src/market_research_crew/: crew.py  main.py
Agentic Graph/examples/import example/CrewAI Market Research Crew/src/market_research_crew/config/: agents.yaml  tasks.yaml
Agentic Graph/examples/import example/CrewAI Market Research Crew/src/market_research_crew/tools/: market_data_tool.py
Agentic Graph/examples/import example/LangGraph Research Assistant/: README.md  langgraph.json  pyproject.toml
Agentic Graph/examples/import example/LangGraph Research Assistant/research_assistant/: graph.py  nodes.py  state.py  tools.py
(+104 files in other folders)
