[project]
name = "market_research_crew"
version = "0.1.0"
description = "A CrewAI market research crew — sample project for Agentic Graph"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.80.0",
]

[project.scripts]
market_research_crew = "market_research_crew.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
