[project]
name = "research_assistant"
version = "0.1.0"
description = "A LangGraph research assistant — sample project for Agentic Graph"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
